--- a/gulimall-coupon/pom.xml
+++ b/gulimall-coupon/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.2</version>
+        <version>2.1.8.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.tzy.gulimall</groupId>
@@ -13,10 +13,12 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>gulimall-coupon</name>
     <description>Demo project for Spring Boot</description>
+
     <properties>
-        <java.version>8</java.version>
-        <spring-cloud.version>2022.0.4</spring-cloud.version>
+        <java.version>1.8</java.version>
+        <spring-cloud.version>Greenwich.SR3</spring-cloud.version>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
